# dcollector

./: .env-example  .gitignore  Cargo.toml  build.rs
migrations/2022-03-07-225050_create_ups_entries/: down.sql  up.sql
migrations/2022-03-08-144641_create_sys_stats/: down.sql  up.sql
migrations/2022-03-08-235134_add_load_averages/: down.sql  up.sql
migrations/2022-03-09-000326_add_cpu_stats/: down.sql  up.sql
migrations/2022-03-09-123409_create_proc_stats/: down.sql  up.sql
migrations/2022-05-19-200213_add_disk_stats/: down.sql  up.sql
migrations/2022-05-20-182426_add_host_name_to_diskstat_and_procstat/: down.sql  up.sql
migrations/2022-09-18-115033_memory_as_bigint/: down.sql  up.sql
migrations/2024-03-10-001258_add_net_stats/: down.sql  up.sql
src/: dcollector.igni  lib.rs  main.rs  models.rs  postgres.rs  schema.rs  systeminfo.rs  ups.rs
