[package]
name = "dcollector"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
ctrlc = "3.2.1"
diesel = { version = "1.4.8", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
lockfile = "0.3.0"
nut-client = "0.4.2"
serde = "1.0.136"
serde_derive = "1.0.136"
sysinfo = "0.23.5"
